submit java-spring-ru/configuration